debhelper (11.1.4) UNRELEASED; urgency=medium

  * qmake.pm/qmake4.pm: Avoid global state in the build systems.
  * dh_makeshlibs: Fix --no-act, which could still cause writes
    to the shlibs file.  Thanks to Sven Joachim for reporting it.
  * dh_installdocs: Discard auto-detected main doc package when
    passed -A/--all as it causes file-conflicts.
    (Closes: #886108, #888294)

 -- Niels Thykier <niels@thykier.net>  Sun, 21 Jan 2018 08:18:20 +0000

debhelper (11.1.3) unstable; urgency=medium

  * autoscripts/*: Improve rollback handling of many scripts.
    Notably a lot of scripts failed to rerun the postinst parts
    on an "abort-upgrade".  (Closes: #446856)
  * debian/control: Add a Breaks on meson to ensure that we have
    meson (>= 0.40.0) as the meson build system uses --wrap-mode.
    This is mostly relevant for backports.
  * Dh_Lib.pm: When printing commands (e.g. for doit), also show
    changes to the environment (when done as a part of the
    command).
  * ninja.pm: Set LC_ALL=C.UTF-8 when calling ninja to avoid
    meson choking on UTF-8 characters when it embeds itself into
    e.g. the build or install.  (Closes: #873831)
  * dh: Remove the assumption that sequences will supply only
    "safe no-op" parameters to commands.  Thanks to Axel Beckert
    and Sascha Steinbiss for the report.  (Closes: #887727)

 -- Niels Thykier <niels@thykier.net>  Sat, 20 Jan 2018 18:26:06 +0000

debhelper (11.1.2) unstable; urgency=medium

  * dh: Fix non-sense error about a missing "startpoint object
    method".

 -- Niels Thykier <niels@thykier.net>  Sun, 07 Jan 2018 21:31:40 +0000

debhelper (11.1.1) unstable; urgency=medium

  * dh: Fix an off-by-one in a compat check.  This fixes an
    internal error for compat 9 packages that requires dh to
    recurse into the debian/rules file.  Thanks to Helmut
    Grohne for reporting the bug.  (Closes: #886518)

 -- Niels Thykier <niels@thykier.net>  Sun, 07 Jan 2018 09:48:17 +0000
